--- a/Configurator/Properties/Resources.resx
+++ b/Configurator/Properties/Resources.resx
@@ -1598,4 +1598,10 @@ Please close MySQL Workbench and restart {0} to perform the merge.</value>
   <data name="SplashScreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SplashScreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CancelUpgradingProductsDetailText" xml:space="preserve">
+    <value>Are you sure you want to cancel upgrading your server installation?</value>
+  </data>
+  <data name="upgrade_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\upgrade_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
