--- a/Configurator/Properties/Resources.resx
+++ b/Configurator/Properties/Resources.resx
@@ -128,7 +128,7 @@
     <value>Failed</value>
   </data>
   <data name="CancelConfigurationQuestion" xml:space="preserve">
-    <value>Are you sure you want to cancel configuring your product(s)?</value>
+    <value>Are you sure you want to cancel the MySQL Server configuration?</value>
   </data>
   <data name="mysql_server" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mysql-server.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -1597,5 +1597,8 @@ Please close MySQL Workbench and restart {0} to perform the merge.</value>
   </data>
   <data name="upgrade_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\upgrade_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TransparentSakilaLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TransparentSakilaLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
