Bug#35491336 - Logging Options page is making incorrect file path validations
- Added the correct implementation of the "ValidateFilePath" method and renamed the existing one to "ValidateAbsoluteFilePath". The corrected method is the one intented to be used in the Logging Options page and was not correctly migrated over from MySQL Installer (Configurator/Core/Classes/Utilities.cs).
- Updated the InitializeLogger method to effectively initialze the
  logger as it failing to do that (Configurator/Core/Classes/Utilities.cs).

Change-Id: I138e1f68d67b7b3ce9be7f457fd01b5fb1cbd1c9

--- a/Configurator/Properties/Resources.resx
+++ b/Configurator/Properties/Resources.resx
@@ -1601,4 +1601,28 @@ Please close MySQL Workbench and restart {0} to perform the merge.</value>
   <data name="TransparentSakilaLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TransparentSakilaLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="PathContainsColonError" xml:space="preserve">
+    <value>The given path contains a colon (":") that is not part of a volume identifier (for example, "c:\").</value>
+  </data>
+  <data name="PathContainsInvalidCharactersError" xml:space="preserve">
+    <value>Invalid characters found in the path, or the path is badly formed.</value>
+  </data>
+  <data name="PathContainsNoFileError" xml:space="preserve">
+    <value>No file name was specified in the given path.</value>
+  </data>
+  <data name="PathIsNullError" xml:space="preserve">
+    <value>The given file path is null.</value>
+  </data>
+  <data name="PathNonExistentDirectoryError" xml:space="preserve">
+    <value>The directory in the given path does not exist.</value>
+  </data>
+  <data name="PathNotAbsoluteError" xml:space="preserve">
+    <value>The given path is not an absolute path.</value>
+  </data>
+  <data name="PathTooLongError" xml:space="preserve">
+    <value>Absolute path exceeds the maximum length allowed for a path.</value>
+  </data>
+  <data name="PathUnknownError" xml:space="preserve">
+    <value>The given file path is invalid.</value>
+  </data>
 </root>
